# monclay

./: .gitignore  LICENSE  monclay.cabal
app/: Main.hs
src/: Cell.hs  Player.hs  World.hs
